crates/plotnik-tests/tests/02-parser/recovery_incomplete/lowercase_branch_label_missing_expression.txt
Q = [label:]
------------------ DIAGNOSTICS -------------------
error: branch labels must be PascalCase
 --> query.ptk:1:6
  |
1 | Q = [label:]
  |      ^^^^^
  |
help: use `Label`
  |
1 - Q = [label:]
1 + Q = [Label:]
  |
help: branch labels become variants of an enum in the output

error: expected an expression
 --> query.ptk:1:12
  |
1 | Q = [label:]
  |            ^
  |
help: an expression is a node `(kind)`, anonymous node `"text"`, sequence `{...}`, or alternation `[...]`
